recipes-extended/iptables/iptables/iptables.rules
# Generated by iptables-save v1.8.10 on Sat Feb 15 12:44:19 2025
*mangle
:PREROUTING ACCEPT [1053:127321]
:INPUT ACCEPT [1053:127321]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1052:120953]
:POSTROUTING ACCEPT [1052:120953]
COMMIT
# Completed on Sat Feb 15 12:44:19 2025
# Generated by iptables-save v1.8.10 on Sat Feb 15 12:44:19 2025
*nat
:PREROUTING ACCEPT [2:72]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sat Feb 15 12:44:19 2025
# Generated by iptables-save v1.8.10 on Sat Feb 15 12:44:19 2025
*filter
:INPUT DROP [3:160]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m limit --limit 3/min -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -m owner --uid-owner tor -j ACCEPT
COMMIT
# Completed on Sat Feb 15 12:44:19 2025
